# agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml  run.py  txt.txt
data/: data_dictionary.csv  products.csv  readme.txt  test.csv  users.csv
src/agent/: graph.py  run_agent.py  runtime.py  state.py
src/agent/nodes/: n1_prepare_input_bundle_node.py  n2_plan_joins_node.py  n3_generate_feature_ideas_node.py  n4_generate_and_apply_feature_code_node.py  n5_apply_legacy_executor_node.py  n6_train_catboost_and_select_top_features_node.py
src/common/: constraints.py  exceptions.py  llm_client.py  logging_setup.py  paths.py  runtime.py
src/common/archive/compilation/: models.py  parser.py  prompt_builder.py  service.py
src/common/feature_codegen/: exceptions.py  executor.py  models.py  prepared_dataset_builder.py  prompt_builder.py  service.py
src/common/feature_ideas_generation/: models.py  parser.py  prompt_builder.py  service.py
src/common/io/: exceptions.py  file_manager.py  models.py  repository.py
src/common/joins/: exceptions.py  prepared_dataset.py  simple_executor.py  simple_join_service.py
src/common/joins/feature_planning_v1/: exceptions.py  executor.py  models.py  parser.py  prompt_builder.py  service.py
src/common/joins/planner_module/: exceptions.py  models.py  planner.py
src/common/readme/: exceptions.py  input_bundle_cache.py  io.py  merger.py  models.py  parser.py  prompt_builder.py  service.py
src/common/schema/: models.py
src/stats/: scoring_v2.py
src/utils/: check_submission.py  scoring.py
